Closed Bug 1266288 Opened 8 years ago Closed 8 years ago

Scroll-linked changes to the "margin" shorthand property aren't detected

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: mstange, Assigned: kats)

Details

Attachments

(1 file)

The list at nsDOMCSSDeclaration::SetPropertyValue has the properties margin-left, margin-top, margin-right and margin-bottom. However, it does not contain the margin shorthand, nor the margin-{block,inline}-{start,end} properties.

Those properties should be added so that we can detect scroll-linked effects that change them.
Assignee: nobody → bugmail.mozilla
Comment on attachment 8743904 [details]
MozReview Request: Bug 1266288 - Track changes to all margin properties for scroll-linked effects. r?mstange

https://reviewboard.mozilla.org/r/48177/#review44885
Attachment #8743904 - Flags: review?(mstange) → review+
https://hg.mozilla.org/mozilla-central/rev/9e5cdc2e73c4
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.