Bug 1266288 - Track changes to all margin properties for scroll-linked effects. r=mstange

MozReview-Commit-ID: D0wN1TdFdtM

--HG--
extra : rebase_source : 227cc71e5ffa3d980435de2e6ea9074d9cec4667