layout/style/nsDOMCSSDeclaration.cpp
@@ -85,10 +85,15 @@ nsDOMCSSDeclaration::SetPropertyValue(const nsCSSProperty aPropID,
     case eCSSProperty_left:
     case eCSSProperty_bottom:
     case eCSSProperty_right:
+    case eCSSProperty_margin:
     case eCSSProperty_margin_top:
     case eCSSProperty_margin_left:
     case eCSSProperty_margin_bottom:
     case eCSSProperty_margin_right:
+    case eCSSProperty_margin_inline_start:
+    case eCSSProperty_margin_inline_end:
+    case eCSSProperty_margin_block_start:
+    case eCSSProperty_margin_block_end:
       mozilla::layers::ScrollLinkedEffectDetector::PositioningPropertyMutated();
       break;
     default:
